--- a/websites/sapienz/stylesheet.css
+++ b/websites/sapienz/stylesheet.css
@@ -114,16 +114,29 @@
 
 .galleryWindow {
     top: 100px;
-    width: 600px;
-    margin-left: -300px;
+    width: 800px;
+    margin-left: -400px;
 }
 
 #galleryImage {
-    height: 400px;
-    background-color: lightgrey;
+    height: 425px;
+    background-color: rgba(0,0,0,.1);
     background-size: contain;
     background-position-x: center;
     background-repeat: no-repeat;
+    position: relative;
+    z-index: 1;
+}
+
+.galleryImageLoader {
+    height: 425px;
+    background-image: url(imgs/loading.gif);
+    background-size: 4%;
+    background-position: center;
+    background-repeat: no-repeat;
+    box-sizing: border-box;
+    position: absolute;
+    z-index: 0;
 }
 
 .loginWindow input[type=text],
@@ -289,6 +302,10 @@
     text-align: left;
     border-bottom: solid thin grey;
     padding-left: .25em;
+}
+
+.filelist tr {
+    cursor: pointer;
 }
 
 .filelist td:nth-child(1) {
