--- a/websites/sapienz/stylesheet.css
+++ b/websites/sapienz/stylesheet.css
@@ -231,7 +231,7 @@
 }
 
 .box {
-    border: thin grey solid;
+    border: thin rgba(128, 128, 128, 0.427) solid;
     /* padding:1em; */
     border-radius: 5px;
     margin-top: 1em;
@@ -276,8 +276,7 @@
     white-space:nowrap;
 }
 
-/* FILES */
-
+/* FILES, HOME TILES */
 .filebrowserLoader {
     font-size: 1.25em;
     width: 100%;
@@ -285,7 +284,7 @@
     /* background-color: red; */
 }
 
-.fileBrowser {
+.fileBrowser, .homeTiles {
     box-sizing: border-box;
     padding:1em 1em 10em 1em;
     left: 25%;
@@ -293,6 +292,45 @@
     position: absolute;
     width:50%;
     overflow: hidden;
+}
+
+.homeTile {
+    width: 45%;
+    margin: 1em 1em 0 0;
+    height: 155px;
+    box-sizing: border-box;
+    padding:1.75em .5em;
+    display: inline-block;
+    border-radius: 5px;
+    text-align: center;
+    color: white;
+    background-color: rgb(213, 171, 108);
+    opacity: 0.8;
+    cursor: pointer;
+    border:rgba(255, 255, 255, 0.15) solid 8px;
+}
+
+.homeTile:hover {
+    opacity: 1;
+    border:rgba(255, 255, 255, 0.55) solid 8px;
+}
+
+.homeTile i {
+}
+.homeTile div {
+    margin-top: 1em;
+}
+
+.homeTiles .homeTile:nth-child(3) {
+    background-color: rgb(201, 125, 201);
+}
+
+.homeTiles .homeTile:nth-child(5) {
+    background-color: rgb(116, 114, 184);
+}
+
+.homeTiles .homeTile:nth-child(6) {
+    background-color: rgb(140, 215, 147);
 }
 
 .filelist.path {
